--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -1,6 +1,6 @@
 /* this is some magical font-importing.  
 you'll learn about it later. */
-@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap");
 
 body {
   margin: 0;
@@ -11,12 +11,12 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
@@ -45,4 +45,44 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+/* J Solution: */
+/* ============================================= */
+
+.header {
+  /* Have the main header be a flex container. */
+  display: flex;
+
+  align-items: center;
+  padding: 8px;
+}
+
+.left-header {
+  /* Create an outer flex container to hold the 
+  logo and links. */
+  display: flex;
+  align-items: center;
+}
+
+.links {
+  /* Create a flex container to hold the link 
+  list items. */
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding-left: 16px;
+}
+
+.right-header {
+  /* Create an outer flex container to hold the 
+  notifications and profile-image. */
+  display: flex;
+
+  /* Push the right-header container completely
+  to the right. */
+  margin-left: auto;
+
+  gap: 16px;
+  align-items: center;
 }
