--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,7 +10,37 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
+  /* J */
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+/* J */
+.plants {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+/* J */
+.info {
+  text-align: center;
+  max-width: 200px;
+}
+
+/* J */
+/* .barberry,
+.chilli,
+.pepper,
+.saffron {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 200px;
+} */
 
 /* do not edit this footer */
 .footer {
