--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -23,4 +23,58 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* ================================== */
+/* J solution */
+body {
+  /* The page is divided into 3 divs (header,
+  content, footer). Set the body to become a flex
+  container to store them (this might be neccesary
+  because of the body declaration "height: 100vh"). */
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  /* Remove list decoration. */
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+a {
+  /* Remove text decoration. */
+  text-decoration: none;
+  color: grey;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  gap: 18px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  flex: 1 1 auto;
+}
+
+button {
+  padding: 8px;
 }
